--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,13 @@
 
 body {
     font-family: Roboto, sans-serif;
+    /*background-color: #daaec6;*/
 }
 
 /* ----------------------------------------------------Navbar ---------------------------------*/
 .navbar-style {
-    background-color:  #88275d;
-    padding-left: 50px;
+    background-color:   #88275d;
+    padding-left: 30px;
 }
 
 .navbar-style {
@@ -35,7 +36,7 @@ body {
     width: 35px;
     height: 3px;
     background-color: #fafafa;
-    margin: 6px 0;
+    margin: 6px 20px 6px 0;
 }
 
 .navbar-toggler {
@@ -86,20 +87,102 @@ body {
 
 .lead {
     font-size: xxx-large;
-   /* font-weight: 500;*/
+    font-weight: 500;
 }
   
-.btn {
-    text-transform: uppercase;
-    text-align: justify;
-}
 
 .about {
     height: 400px;
-    align-items:center;
     justify-content: center;
-    color: #88275d;
-    text-align: center;
+    align-items: center;
+    color:  #88275d;
+    text-align: justify;
     text-shadow: 5px 3px 10px rgba(0, 0, 0, 0.281);
-    letter-spacing: 2px;
+    margin-bottom:80px;
+}
+
+.welcome-container {
+    height: 380px;
+    border: 1px #88275d solid;
+    margin-bottom: 70px; 
+    margin-top: 20px;
+    padding-right: 0;
+    color: #fafafa;
+    
+ }
+.hr-rule {
+    border: 3px solid #88275d;
+    width: 700px;
+}
+ .title {
+     text-align: center;
+     margin-top: 20px;
+     color: #88275d;
+ }
+
+
+.welcome-text{
+    height: 450px;
+    width: 100%;
+    text-align: center;
+    color: #88275d;
+    padding: 5px 50px 20px 20px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    
+   }
+
+.btn-about{
+    margin-top: 10px;
+    margin-left: 100px;
+}
+.welcome-img {
+  background-image: url("../images/face.jpg");
+  height: 390px;
+  width: 330px;
+  margin-left:60px;
+   
+  }
+
+.quote-img {
+ background-image: url("../images/yogi.jpg");
+ background-repeat: no repeat, no-repeat;
+  height: 290px;
+  width: 229px;
+  padding-left: 50px;
+
+  
+}
+/*----------------------------------Footer--------------------*/
+.social-media {
+    text-align: center;
+}
+
+.social-media li {
+    display:inline-block;
+}
+
+.social-media i {
+    font-size: 150%;
+    padding: 20%;
+    color:  #fafafa;
+    margin-right: 50px;
+}
+
+
+footer{
+	margin: 0;
+    color: #fafafa;
+    background-color: #88275d;
+}
+
+.follow {
+    text-align: center;
+    margin-top: 60px;
+}
+
+.contact {
+   text-align: center;
+   margin-top: 60px;
+   font-size: small;
 }
