--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,17 +3,14 @@
 
 body {
     font-family: Roboto, sans-serif;
-    /*background-color: #daaec6;*/
+   
 }
 
 /* ----------------------------------------------------Navbar ---------------------------------*/
 .navbar-style {
     background-color:   #88275d;
     padding-left: 30px;
-}
-
-.navbar-style {
-  color:  #fafafa;
+    color:  #fafafa;
 }
 
 
@@ -134,8 +131,8 @@ body {
 
 .btn-about{
     margin-top: 10px;
-    margin-left: 100px;
 }
+
 .welcome-img {
   background-image: url("../images/face.jpg");
   height: 390px;
@@ -170,7 +167,8 @@ body {
 }
 
 
-footer{
+footer {
+    height: 250px;
 	margin: 0;
     color: #fafafa;
     background-color: #88275d;
@@ -186,3 +184,100 @@ footer{
    margin-top: 60px;
    font-size: small;
 }
+
+/*--------------------------------------Contact form----------------*/
+
+.form-section {
+    height: 650px;
+    background-image: url("../images/beach.jpg");
+    clear: left;
+    background-size: cover;
+    background-position: center;
+   }
+
+.signup-form {
+  margin-top:50px;
+  background-color: rgba(60, 60, 60, 0.6);
+  position: relative;
+  padding: 30px ;
+}
+
+.form-section h3, h4 {
+    color: #fafafa;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+  .form-control {
+    background: transparent;
+    width: 100%;
+    height: 25px;
+    /*margin5px 0 20px 0;*/
+    border: 1px solid #fafafa;
+    border-radius: 5px;
+}
+
+.btn-form {
+    margin-top: 15px;
+    margin-bottom: 5px;
+    color: #fafafa;
+    background-color: #88275d;
+    width: 100px;
+}
+.label-color {
+    color: #fafafa
+}
+
+  
+/*----------------------------------------------Media Queries-----------------------*/
+@media(min-width: 992px) {
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 60%;
+    }
+
+
+}
+
+/*----------------------------------------------Class times-----------------------*/
+
+#class-times{
+    background-image: url('../images/women.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    overflow: hidden;
+}
+
+#class-times div {
+    color: #fafafa;
+    background-color: rgba(0,0,0, .6);
+    width: 24%;
+    height: 300px;
+    float: left;
+    padding: 30px 0px 10px 10px;
+    text-align: center;
+    margin: 6px;
+}
+
+#class-times h3 {
+    color: #fafafa;
+}
+
+#class-times a {
+  color:  #fafafa;
+  background-color: transparent;
+  text-decoration: none;
+} 
+
+#class-times a:hover {
+  color: #88275d;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+
+ 
