--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,7 @@
 
 body {
   font-family: Lato, sans-serif;
-  /* position: absolute;
-    margin: 0px;
-    overflow: hidden;
-    top: 0px;
-    bottom: 0px;
-    width: 100%;*/
+  
 }
 
 /* ----------------------------------------------------Navbar ---------------------------------*/
@@ -20,9 +15,8 @@ body {
 .navbar-brand {
   color: #c4881be3;
   font-size: xx-large;
-  margin-left: 10px;
+  margin-left: 5px;
 }
-
 
 
 .navbar-brand-text:hover {
@@ -32,6 +26,7 @@ body {
   font-size: x-large;
   padding-left: 20px;
   color: #c4881be3;
+  text-shadow: 5px 3px 10px rgba(0, 0, 0, 0.281);
 }
 /*-------Grow hover animation from website travis.media, link in README.md--*/
 .grow a {
@@ -41,7 +36,7 @@ body {
 .grow a:hover {
   transform: scale(1.1);
 }
-/*---------------------------------------------------------------*/
+/*----------------------------------------------------------------------*/
 
 .active {
   border-bottom: 3px solid #c4881be3;
@@ -49,24 +44,27 @@ body {
 }
 
 .navbar-nav li {
-  padding-left: 20px;
+  padding-left: 10px;
 }
 
-.navbar-toggler-icon {
+/*.navbar-toggler-icon {
   border-color: #c4881be3;
-  width: 35px;
   height: 3px;
   background-color: #c4881be3;
-}
+  margin-right: 1px;
+  margin-bottom: 5px;
+}*/
 
 .navbar-toggler {
-  padding: 0;
+  border: 2px solid #c4881be3;
+  color: #c4881be3;
+  
 }
 
 
 /* ---------------------------------------------Hero Image Section ----------------------------------*/
 
-/* Code for hero image and animation borrowed from the Love Running project then edite to fit my website */
+/* Code for hero image and animation borrowed from the Love Running project then edited to fit my website */
 
 .hero-container {
   max-width: 100%;
@@ -103,19 +101,7 @@ body {
   position: relative;
 }
 
-.jumbotron {
-  text-align: center;
-  background: hsla(39, 52%, 54%, 0.89);
-  color: #fafafa;
-  text-shadow: 5px 3px 10px slategray;
-border-radius: 10%;
-}
 
-.lead {
-  font-size: xxx-large;
-  font-weight: 500;
-  
-}
 /* ---------------------------------------------About section------------------------------------*/
 
 .about-container {
@@ -136,6 +122,7 @@ border-radius: 10%;
 
 .owner-container {
     border: 3px solid #c4881be3;
+    background-color:#c4881be3;
 }
 
 .title-text {
@@ -220,10 +207,8 @@ border-radius: 10%;
   background-color: #c4881be3;
   width: 100px;
 }*/
-/*--------------------------------------------Photos section-----------------------------------*/
-/*.photos {
-    border: 3px solid #c4881be3;
-}*/
+/*--------------------------------------------Photos section on home page-----------------------------------*/
+
 
 .photos img {
     max-width: 100%;
@@ -234,17 +219,37 @@ border-radius: 10%;
 
 /* ----------------------------------------------------Footer ---------------------------------*/
 
-/* Code for creating icons borrowed from Love Running challenge then edited  */
+
 footer {
   height: auto;
   width: 100%;
   color: #fafafa;
   background-color: #c4881be3;
 }
+
+.follow-heading {
+  margin-top: 30px;
+  text-align: center;
+}
+
+.contact-heading {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-size: small;
+}
+.contact-heading a {
+  color: #fafafa;
+}
+.contact-heading a:hover {
+  opacity: 0.2;
+  text-decoration: underline;
+}
 .social-media {
   text-align: center;
 }
 
+/* Code for social media icons borrowed from Love Running challenge then edited  */
 .social-media li {
   display: inline-block;
 }
@@ -260,24 +265,7 @@ footer {
   opacity: 0.3;
 }
 
-.follow {
-  margin-top: 30px;
-  text-align: center;
-}
 
-.contact {
-  text-align: center;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  font-size: small;
-}
-.contact a {
-  color: #fafafa;
-}
-.contact a:hover {
-  opacity: 0.2;
-  text-decoration: underline;
-}
 
 /* ----------------------------------------------------Modal -------------------------------*/
 
@@ -318,7 +306,7 @@ footer {
 }
 /* ----------------------------------------------------Contact page -------------------------------*/
 
-/* code borrowed from the Love Running challenge and also from the Resume Project and then edited to fit the design of my website */
+/* form created by using code borrowed from the Love Running challenge and from the Resume Project, and then edited to fit the design of my website */
 
 .form-section {
   height: auto;
@@ -377,32 +365,31 @@ h4 {
   }
 }
 
-@media screen and (max-width: 780px) {
-  #photo {
-    column-count: 2;
-  }
-}
+
 
 /*----------------------------------------------Class times-----------------------------*/
 
-/* Inspiration and the bits of code for class times borrowed from Love Running challenge then edited with bootstrap grid options */
+/* Inspiration and the code for class times borrowed from Love Running challenge then edited with bootstrap grid options */
 
-.class-heading {
+.class-heading {  
   height: 50px;
   background-color: #c4881be3;
   color: #fafafa;
   text-align: center;
   padding-top: 10px;
+  margin-top: 30px;
 }
 
 .class-container {
-  background-image: url("../images/women.jpg");
+  /*background-image: url("../images/women.jpg");*/
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   width: 100%;
   overflow: hidden;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  margin-top: 30px;
+  
 }
 
 .class-times {
@@ -437,18 +424,9 @@ h4 {
 
 /*-------------------------------------Gallery Page-----------------------------------------*/
 
-/*---Code taken from Love Running challenge---*/
 
-#photo {
-  clear: both;
-  line-height: 0;
-  column-count: 3;
-  column-gap: 0px;
-}
 
-#photo img {
-  width: 100%;
-}
+
 
 /*-------------------------------------Yoga Page / What i do?---------------------------------------------*/
 
@@ -493,6 +471,25 @@ h4 {
 .online-session {
     border: 2px solid #c4881be3;
     margin-bottom: 50px;
-    margin-left: 90px;
+   
 }
-    
+
+   
+/*--------------------------Retreats page -------------------------------------------------------------------*/
+
+.retreat-title {
+    color:  hsla(38, 38%, 25%, 0.89);
+    text-align: center;
+    margin-top: 20px;
+}
+.retreat-text{
+      color:  hsla(38, 38%, 25%, 0.89);
+      text-align: justify;
+      font-size: large;
+  }
+.video-position {
+    display:flex;
+    justify-content:center;
+    margin-bottom: 30px;
+}
+ 
