--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
 }
 .menuitem a {
   font-size: x-large;
-  padding-left: 20px;
+  /*padding-left: 150px;*/
   color: #c4881be3;
   text-shadow: 5px 3px 10px rgba(0, 0, 0, 0.281);
 }
@@ -41,6 +41,7 @@ body {
 .active {
   border-bottom: 3px solid #c4881be3;
   text-decoration: none;
+ 
 }
 
 .navbar-nav li {
@@ -68,8 +69,8 @@ body {
 
 .hero-container {
   max-width: 100%;
-  height: 850px;
-  background: url("../images/women.jpg") no-repeat center center;
+  height: 950px;
+  background: url("../images/focus.JPG") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -95,7 +96,7 @@ body {
 }
 
 .hero-outer {
-  height: 650px;
+  height: 950px;
   width: 100%;
   overflow: hidden;
   position: relative;
@@ -122,7 +123,7 @@ body {
 
 .owner-container {
     border: 3px solid #c4881be3;
-    background-color:#c4881be3;
+    
 }
 
 .title-text {
@@ -173,7 +174,11 @@ body {
   font-size: larger;
 }
 
-
+.book-session-text {
+color: hsla(38, 38%, 25%, 0.89);
+text-align: center;
+padding-top: 20px;
+}
 /* ---------------------------------------------------Lets connect ---------------------------------*/
 
 .connect-form {
@@ -241,6 +246,10 @@ footer {
 .contact-heading a {
   color: #fafafa;
 }
+
+.follow-heading i {
+    color: #fafafa;
+}
 .contact-heading a:hover {
   opacity: 0.2;
   text-decoration: underline;
@@ -250,6 +259,7 @@ footer {
 }
 
 /* Code for social media icons borrowed from Love Running challenge then edited  */
+
 .social-media li {
   display: inline-block;
 }
@@ -310,7 +320,7 @@ footer {
 
 .form-section {
   height: auto;
-  background-image: url("../images/beach.jpg");
+  background-image: url("../images/mountain.png");
   clear: left;
   background-size: cover;
   background-position: center;
@@ -365,8 +375,15 @@ h4 {
   }
 }
 
-
-
+@media (min-width: 992px) {
+    .description-text {
+    text-align: justify;
+    font-size: larger;
+    margin: 20px 0px 20px 50px;
+    
+    }
+    
+}
 /*----------------------------------------------Class times-----------------------------*/
 
 /* Inspiration and the code for class times borrowed from Love Running challenge then edited with bootstrap grid options */
@@ -377,7 +394,7 @@ h4 {
   color: #fafafa;
   text-align: center;
   padding-top: 10px;
-  margin-top: 30px;
+  
 }
 
 .class-container {
@@ -387,13 +404,13 @@ h4 {
   background-position: center;
   width: 100%;
   overflow: hidden;
-  margin-bottom: 30px;
-  margin-top: 30px;
+  
+  
   
 }
 
 .class-times {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.4);
   border: 1px solid #fafafa;
 }
 
@@ -431,32 +448,60 @@ h4 {
 /*-------------------------------------Yoga Page / What i do?---------------------------------------------*/
 
 .yoga-heading {
-  color: #88275d;
+  color: #c4881be3;
   text-align: justify;
+  text-transform: uppercase;
+  font-size: xx-large;
   /*margin-top: 50px;
     padding-bottom: 20px;*/
 }
 
-.quote-img {
-  background-image: url("../images/yogi.jpg");
-  background-repeat: no repeat, no-repeat;
-  height: 290px;
-  width: 229px;
-  margin-left: 120px;
-  margin-top: 0px;
+
+
+.description-text {
+    text-align: justify;
+    font-size: larger;
+    margin: 50px 0px 50px 150px;
 }
 .quote-text {
   text-align: center;
-  padding-top: 60px;
-  margin-left: 180px;
-  color: #88275d;
+  font-size: x-large;
+  text-shadow: 5px 3px 10px rgba(0, 0, 0, 0.281);
+  padding-top: 50px;
+  color:#c4881be3;
+  margin-top: 50px;
+ 
+  
 }
 
 .heading-text {
-  color: #c4881be3;
+  color: #fafafa;
+  background-color: #c4881be3;
   text-align: center;
-  text-shadow: 5px 3px 10px rgba(0, 0, 0, 0.281);
   font-style: italic;
+  margin: 50px 30px 30px 20px;
+}
+
+.kundalini-img {
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
+}
+
+.yin-img {
+margin-left: 150px;
+}
+
+.reiki-img {
+ margin-top: 50px;
+}
+
+.breathing-img {
+    margin-bottom: 50px;
+}
+
+.shaman-img {
+    margin-left: 20px;
 }
 /*--------------------------Home page book section-------------------------------------------------------------------*/
 .btn-book {
@@ -468,8 +513,8 @@ h4 {
   margin: 0 auto;
 }
 
-.online-session {
-    border: 2px solid #c4881be3;
+/*.online-session {
+    border: 2px solid #c4881be3;*/
     margin-bottom: 50px;
    
 }
